Add Jadwigi Pano

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       <li class="pano__list_item"><a class='pano__link' href="./malownicza.html">malownicza</a></li>
       <li class="pano__list_item"><a class='pano__link' href="./przyszlosci.html">przyszłości</a></li>
       <li class="pano__list_item"><a class='pano__link' href="./jagielka.html">jagiełka</a></li>
+      <li class="pano__list_item"><a class='pano__link' href="./jadwigi.html">jadwigi</a></li>
     </ul>
     <!-- <script src="./js/index.js"></script> -->
   </body>
